2006-02-28  Sven Neumann  <sven@gimp.org>

	* app/core/gimpbrush.c
	* app/core/gimpbuffer.c
	* app/core/gimpimagefile.c
	* app/core/gimppattern.c
	* app/dialogs/preferences-dialog.c
	* app/tools/gimpmeasuretool.c
	* app/tools/gimprectangletool.c
	* app/tools/gimprectselecttool.c
	* app/widgets/gimpimagepropview.c
	* app/widgets/gimpsizebox.c
	* app/widgets/gimptemplateeditor.c
	* plug-ins/imagemap/imap_statusbar.c: use U+00D7 MULTIPLICATION SIGN
	instead of x when displaying sizes.

2006-02-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animationplay.c: coding style cleanup.

2006-02-27  Manish Singh  <yosh@gimp.org>

	* app/base/cpu-accel.c
	* app/composite/gimp-composite-3dnow.h
	* app/composite/gimp-composite-mmx.h
	* app/composite/gimp-composite-sse.h
	* app/composite/gimp-composite-sse2.h: check for __PIC__ in addition
	to PIC.

2006-02-27  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-merge.c: purely cosmetic change.

2006-02-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animationplay.c (detach_callback): show the
	shape window with a small offset.

2006-02-26  Simon Budig  <simon@gimp.org>

	* plug-ins/bmp/bmpwrite.c: properly round the resolution entry.
	Fixes bug #332501.

2005-06-26  Hans Breuer  <hans@breuer.org>

	* **/makefile.msc app/gimpcore.def : updated
	
2006-02-26  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpzoompreview.c: added "drawable" as construct-only
	property so that the widget can be constructed using g_object_new().

2006-02-26  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpaspectpreview.c: added "drawable" as construct-only
	property so that the widget can be constructed using g_object_new().

2006-02-26  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpdrawablepreview.c: added "drawable" as construct-only
	property so that the widget can be constructed using g_object_new().

2006-02-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animationplay.c: use a normal toplevel window for