@@ -335,7 +335,7 @@ load_wmf_size (const gchar *filename,
     {
       if (size_label)
         {
-          gchar *text = g_strdup_printf (_("%d x %d"), width, height);
+          gchar *text = g_strdup_printf (_("%d × %d"), width, height);
 
           gtk_label_set_text (GTK_LABEL (size_label), text);
           g_free (text);
