@@ -11,6 +11,10 @@
 	* app/widgets/gimpimagepropview.c
 	* app/widgets/gimpsizebox.c
 	* app/widgets/gimptemplateeditor.c
+	* plug-ins/common/ccanalyze.c
+	* plug-ins/common/svg.c
+	* plug-ins/common/wmf.c
+	* plug-ins/imagemap/imap_cmd_guides.c
 	* plug-ins/imagemap/imap_statusbar.c: use U+00D7 MULTIPLICATION SIGN
 	instead of x when displaying sizes.
 
